// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Overwrite suggestion change style when selected 1`] = `
<div
  aria-selected={true}
  className="sc-bdVaJa hTXxV"
>
  <p>
    Overwrite
  </p>
</div>
`;

exports[`Project Overwrite suggestion render with overwrite suggestion 1`] = `
<div
  aria-selected={false}
  className="sc-bdVaJa hTXxV"
>
  <p>
    Overwrite
  </p>
</div>
`;
